fixed layout issues

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav {
 }
 .overlay {
   position: fixed;
-  top: 10px;
+  top: -10px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -30,7 +30,7 @@ nav {
 .menu {
   position: fixed;
   right: -10px;
-  top: 0;
+  top: -10px;
   width: 280px;
   height: 100vh;
   background: hsl(0, 0%, 99%);
